test-cases/final-dump/type_error2.exp
Error detected during final normalisation of module(s) type_error2, type_error2.foo
final-dump/type_error2.wybe:1:16: In constructor parameter, unknown type notatype
